# Toy-Robot-App

./: CMakeLists.txt  README.md
simulation/: CMakeLists.txt  copy-siminputs.cmake  simulation.cpp
simulation/inputs/: test_file_empty_command_middle.txt  test_invalid_command_name.txt  test_invalid_movement.txt  test_invalid_place_arg_mismatch.txt  test_invalid_place_offtable_location.txt  test_muliple_place_command.txt  test_northwest_to_southeast_via_internalcells.txt  test_place_left_report.txt  test_place_right_report.txt  test_placecommand_trim.txt  test_roundtrip_via_table_border.txt  test_southwest_to_northeast_via_internalcells.txt  test_uturn_from_origin_eastwards.txt  test_uturn_from_origin_northwards.txt
test/: CMakeLists.txt  integration_test.cpp  test_command_handler.cpp  test_toyrobot.cpp
test/inputs/: input_integration_test13.txt  input_integration_test2.txt  input_integration_test3.txt  input_integration_test4.txt  input_integration_test9.txt
toyrobotlib/: CMakeLists.txt
toyrobotlib/include/: commandhandler.hpp  config.hpp  toyrobot.hpp
toyrobotlib/src/: commandhandler.cpp  config.cpp  toyrobot.cpp
